--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,7 +7,7 @@ sphinx:
   configuration: docs/source/conf.py
 
 # Optionally you ca build your docs in additional formats such as PDF and ePub
-formats: html
+formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
