--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,14 +1,8 @@
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 version: 2
-
-# Build documentation in the docs/ directory with Sphinx
-sphinx:
-  configuration: docs/source/conf.py
-
-# Optionally you ca build your docs in additional formats such as PDF and ePub
-formats: html
-
-# Optionally set the version of Python and requirements required to build your docs
 python:
   version: 2.7
+  install:
+    - requirements: requirements.txt
+sphinx:
+  configuration: docs/source/conf.py
+formats: all
