--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,9 +1,9 @@
 version: 2
 python:
-  setup_py_install: true
   version: 2.7
   install:
-    - requirements: requirements.txt
+     - method: pip
+        path: .
 sphinx:
   configuration: docs/source/conf.py
 formats: all
