--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,7 +1,8 @@
 version: 2
 python:
   version: 2.7
-  pip_install: true
+  install:
+    - requirements: requirements.txt
 sphinx:
   configuration: docs/source/conf.py
 formats: all
