--- a/.github/workflows/gen_avr8_package.yml
+++ b/.github/workflows/gen_avr8_package.yml
@@ -1,6 +1,10 @@
-name: Python package
+name: Python package gen_avr8
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
