--- a/.github/workflows/gen_avr8_python2_publish.yml
+++ b/.github/workflows/gen_avr8_python2_publish.yml
@@ -1,16 +1,12 @@
 name: Install Python2 Package gen_avr8
-
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -23,4 +19,4 @@ jobs:
         pip install setuptools wheel
     - name: Build and publish
       run: |
-        python setup.py sdist bdist_wheel
+        python setup.py --github sdist bdist_wheel
