refactor done, removed pathlib, added splashscreen, updated github workflow actions, docs

--- a/.github/workflows/gen_avr8_docker_checker.yml
+++ b/.github/workflows/gen_avr8_docker_checker.yml
@@ -2,8 +2,12 @@ name: gen_avr8 docker checker
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'Dockerfile'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'Dockerfile'
 jobs:
   build:
     runs-on: ubuntu-latest
