--- a/.github/workflows/gen_avr8_package.yml
+++ b/.github/workflows/gen_avr8_package.yml
@@ -2,14 +2,20 @@ name: Python package gen_avr8
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'gen_avr8/**'
+      - 'setup.py'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'gen_avr8/**'
+      - 'setup.py'
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+        python-version: [2.7, 3.6, 3.7, 3.8]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
