--- a/.github/workflows/gen_avr8_py_checker.yml
+++ b/.github/workflows/gen_avr8_py_checker.yml
@@ -2,8 +2,14 @@ name: gen_avr8 py checker
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'gen_avr8/**'
+      - 'setup.py'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'gen_avr8/**'
+      - 'setup.py'
 jobs:
   build:
     runs-on: ubuntu-latest
