--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,4 @@ workflows:
       - build_and_test:
           filters:
             branches:
-              only: main
+              only: master
