[gen_avr8] updated circular CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
       - python/install-packages:
           pkg-manager: pip
       - run:
+          name: Install mock
+          command: pip install mock
+      - run:
           name: Install pytest
           command: pip install pytest
       - run:
