--- a/.github/workflows/gen_avr8_python2_publish.yml
+++ b/.github/workflows/gen_avr8_python2_publish.yml
@@ -1,4 +1,4 @@
-name: Install Python2 Package gen_avr8
+name: gen_avr8 install python2 package
 on:
   push:
     branches: [ master ]
@@ -21,14 +21,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
+    - name: set up Python
       uses: actions/setup-python@v1
       with:
         python-version: '2.7'
-    - name: Install dependencies
+    - name: install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel
-    - name: Build and publish
+    - name: build and publish
       run: |
         python setup.py --github sdist bdist_wheel
