--- a/.github/workflows/gen_avr8_toc.yml
+++ b/.github/workflows/gen_avr8_toc.yml
@@ -1,11 +1,11 @@
-name: TOC Generator gen_avr8
+name: gen_avr8 toc generator
 on:
   push:
     paths:
       - '**.md'
 jobs:
   generateTOC:
-    name: TOC Generator
+    name: gen_avr8 toc generator
     runs-on: ubuntu-latest
     steps:
       - uses: technote-space/toc-generator@v2
