--- a/.github/workflows/gen_avr8_docker_checker.yml
+++ b/.github/workflows/gen_avr8_docker_checker.yml
@@ -1,4 +1,4 @@
-name: gen_avr8 docker checker
+name: gen_avr8_docker_checker
 on:
   push:
     branches: [ master ]
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: build docker image
+    - name: gen_avr8_docker_checker
       id: docker_checker
       run: |
         echo Building Docker image
