--- a/.github/workflows/gen_avr8_python3_build.yml
+++ b/.github/workflows/gen_avr8_python3_build.yml
@@ -1,4 +1,4 @@
-name: gen_avr8 install python3 package
+name: gen_avr8_python3_build
 on:
   push:
     branches: [ master ]
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: set up Python
+    - name: set up python
       uses: actions/setup-python@v1
       with:
         python-version: '3.9'
