[gen_avr8] code clean up, updated pydocs, docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@
 #     You should have received a copy of the GNU General Public License along
 #     with this program. If not, see <http://www.gnu.org/licenses/>.
 # Info
-#     Defined setup for package gen_avr8.
+#     Defines setup for package gen_avr8.
 #
 
 [metadata]
@@ -30,17 +30,8 @@ keywords=AVR 8bit microcontroller generator
 platforms = any
 url = https://vroncevic.github.io/gen_avr8
 classifiers =
-    Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.1
-    Programming Language :: Python :: 3.2
-    Programming Language :: Python :: 3.3
-    Programming Language :: Python :: 3.4
-    Programming Language :: Python :: 3.5
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
     License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
     License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
@@ -50,6 +41,6 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=2.7
+python_requires = >=3.10
 install_requires=
     ats-utilities
