--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ['setuptools', 'wheel']
+requires = ['setuptools', 'setuptools-scm>1.5.4', 'wheel']
 build-backend = 'setuptools.build_meta'
