[gen_avr8] clean up code, code coverage activities, updated version, docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 # Module
 #     setup.cfg
 # Copyright
-#     Copyright (C) 2018 Vladimir Roncevic <elektron.ronca@gmail.com>
+#     Copyright (C) 2018 - 2024 Vladimir Roncevic <elektron.ronca@gmail.com>
 #     gen_avr8 is free software: you can redistribute it and/or modify it
 #     under the terms of the GNU General Public License as published by the
 #     Free Software Foundation, either version 3 of the License, or
@@ -19,14 +19,14 @@
 
 [metadata]
 name = gen_avr8
-version = 2.5.6
+version = 2.5.7
 author = Vladimir Roncevic
 author_email = elektron.ronca@gmail.com
 description = Python App/Tool/Script Utilities
-license=2018 Free software to use and distributed it.
+license=2018 - 2024 Free software to use and distributed it.
 long_description = file: README.md
 long_description_content_type = text/markdown
-keywords=AVR 8bit microcontroller generator
+keywords=AVR 8-bit microcontroller generator
 platforms = any
 url = https://vroncevic.github.io/gen_avr8
 classifiers =
