[gen_avr8] Updated templates, version, docs

--- a/gen_avr8/conf/template/lib/avr_lib_h.template
+++ b/gen_avr8/conf/template/lib/avr_lib_h.template
@@ -1,7 +1,7 @@
 /* -*- Mode: C; indent-tabs-mode: t; c-basic-offset: 4; tab-width: 4 -*-  */
 /*
  * ${PRO}.h
- * Copyright (C) 2021 Vladimir Roncevic <elektron.ronca@gmail.com>
+ * Copyright (C) ${YEAR} Vladimir Roncevic <elektron.ronca@gmail.com>
  *
  * ${PRO} is free software: you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the
