--- a/gen_avr8/conf/template/app/Makefile.template
+++ b/gen_avr8/conf/template/app/Makefile.template
@@ -1,5 +1,5 @@
 # Makefile
-# Copyright (C) 2020 Vladimir Roncevic <elektron.ronca@gmail.com>
+# Copyright (C) ${YEAR} Vladimir Roncevic <elektron.ronca@gmail.com>
 #
 # ${PRO} is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the
