--- a/gen_avr8/conf/template/lib/cflags.template
+++ b/gen_avr8/conf/template/lib/cflags.template
@@ -1,5 +1,5 @@
 # cflags.mk
-# Copyright (C) 2021 Vladimir Roncevic <elektron.ronca@gmail.com>
+# Copyright (C) ${YEAR} Vladimir Roncevic <elektron.ronca@gmail.com>
 #
 # ${PRO} is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the
@@ -16,7 +16,7 @@
 
 CFLAGS := \
 	--format=avr \
-	--mcu=atmega16
+	--mcu=${MCU}
 
 CCFLAGS := \
 	-Wall \
@@ -30,8 +30,8 @@ CCFLAGS := \
 	-std=gnu99 \
 	-funsigned-char \
 	-funsigned-bitfields \
-	-mmcu=atmega16 \
-	-DF_CPU=16000000UL \
+	-mmcu=${MCU} \
+	-DF_CPU=${OSC} \
 	-MMD \
 	-MP \
 	-MF
