--- a/setup.cfg
+++ b/setup.cfg
@@ -19,11 +19,11 @@
 
 [metadata]
 name = gen_avr8
-version = 2.5.7
+version = 2.5.8
 author = Vladimir Roncevic
 author_email = elektron.ronca@gmail.com
 description = Python App/Tool/Script Utilities
-license=2018 - 2024 Free software to use and distributed it.
+license=GPL 2018 - 2024 Free software to use and distributed it.
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords=AVR 8-bit microcontroller generator
